--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.28.0",
     "@prisma/client": "^5.10.2",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
