--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.28.0",
     "@prisma/client": "^5.10.2",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
@@ -19,6 +18,7 @@
     "eslint-config-next": "14.0.1",
     "fast-sort": "^3.4.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.2.1",
     "postcss": "8.4.31",
     "prisma": "^5.10.2",
