--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@react-email/components": "^0.0.7",
+    "@types/lodash": "^4.17.0",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -21,6 +22,7 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "fast-sort": "^3.4.0",
+    "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.2.1",
