--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
-    "@react-email/components": "^0.0.7",
     "@types/lodash": "^4.17.0",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
@@ -30,8 +29,8 @@
     "prisma": "^5.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-email": "^1.9.4",
     "resend": "^1.0.0",
+    "sharp": "^0.33.2",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
     "zod": "^3.22.4"
